# miso

./: .gitignore  cabal.project.local  shake.hs  template.toml  {{ project }}.cabal
src/: Main.hs
web-src/: index.html
