cabal-version: 1.18
name: {{ project }}
version: {{ version }}
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) {{ year }} {{ name }}
maintainer: {{ email }}
author: {{ name }}
-- synopsis:
-- description:
-- category: Web
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: darcs
    location: https://github.com/{{ github_username }}/{{ project }}

executable {{ project }}
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    other-extensions: RecordWildCards OverloadedStrings
    ghc-options: -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    build-depends:
        base >=4.9 && <5,
        miso >=0.18
